--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,24 +67,17 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
-# Nelmio CORS Configuration
-nelmio_cors:
-    defaults:
-        allow_credentials: false
-        allow_origin: ['*']
-        allow_headers: ['*']
-        allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
-        max_age: 3600
-        hosts: []
-        origin_regex: false
- 
-# FOSRest Configuration
 fos_rest:
-    view:
-        view_response_listener: 'force'
-        formats:
-            json: true
+    body_listener: true
+    param_fetcher_listener: true
     format_listener:
+        enabled: true
         rules:
-            - { path: ^/api, priorities: [ json ], fallback_format: json, prefer_extension: true }
-            - { path: ^/, priorities: [ html ], fallback_format: html, prefer_extension: true }
+          - { path: ^/api, fallback_format: json }
+          - { path: ^/, fallback_format: html }
+    # Enable serializer for the REST API
+    serializer:
+        serialize_null: true
+    view:
+        view_response_listener: force
+     
