--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -80,4 +80,11 @@ fos_rest:
         serialize_null: true
     view:
         view_response_listener: force
-     
+
+nelmio_cors:
+    paths:
+        '^/api':
+            allow_origin: ['*']
+            allow_headers: ['Authorization', 'X-Requested-With', 'Content-Type', 'Accept', 'Origin', 'X-Custom-Auth']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'OPTIONS']
+            max_age: 3600
